test/scc/stmt/semantic-errors/019.a
019.t:4:11: error: expression must have scalar type